# WarpX

./: .readthedocs.yaml  .readthedocs.yml  CMakeLists.txt  GNUmakefile  setup.py
.circleci/: config.yml
Docs/source/usage/: parameters.rst
Examples/Physics_applications/capacitive_discharge/: README.md
Python/pywarpx/: Boundary.py  WarpX.py  __init__.py  _libwarpx.py  callbacks.py  picmi.py
Regression/: WarpX-tests.ini
Source/: Make.WarpX  WarpX.H  WarpX.cpp
Source/Evolve/: WarpXEvolve.cpp
Source/FieldSolver/: CMakeLists.txt  ElectrostaticSolver_EB.cpp  ElectrostaticSolver_ME.cpp  Make.package
Source/Particles/Collision/: BackgroundMCCCollision.cpp  CollisionHandler.cpp
Source/Python/: WarpXWrappers.cpp  WarpXWrappers.h
Source/Utils/: WarpXConst.H
mewarpx/: requirements.txt  setup.py
mewarpx/docs/: changelog.rst  conf.py  index.rst  mewarpx.rst
mewarpx/examples/: capacitive_discharge.py  capacitive_discharge_copy.py  diagnostic_plotting.py  inputs_2d  test_install_fieldsolver.py  thermionic_emission.py  thermionic_ignition.py  wire_in_gap.py
mewarpx/mewarpx/: SimInfo.py  assemblies.py  emission.py  mcc_wrapper.py  mepicmi.py  mwxconstants.py  mwxrun.py  plotting.py  poisson_pseudo_1d.py  testing_util.py  util.py
mewarpx/mewarpx/diags_store/: diag_base.py  field_diagnostic.py  particle_diag.py
mewarpx/tests/: test_capacitive_discharge.py  test_circle_emitter.py  test_custom_criteria.py  test_direct_solver.py  test_embedded_boundary.py  test_emission.py  test_runsuite1d.py  test_thermionic_emission.py
(+5 files in other folders)
